2001-11-19  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/jacl/tcl/lang/Channel.java (seek): Properly indent
	some throws clauses on methods. Turn the seek method into
	a concrete implementation instead of an abstract method.
	By default seek will set the posix error code EINVAL
	to indicate that seeking is not supported. Pass interp
	argument to seek method so we can raise TclExceptions.
	* src/jacl/tcl/lang/FileChannel.java (seek): Update
	method signature to account for changes in Channel class.
	* src/jacl/tcl/lang/SeekCmd.java (cmdProc): Pass interp
	argument to channel's seek command. Don't attempt to
	handle seek not supported case since that will
	be done by the driver.
	* src/jacl/tcl/lang/ServerSocketChannel.java (seek):
	Update method signature to account for changes in Channel
	class. Raise a EACCES posix error code if seek is invoked
	on a server socket so we match Tcl.
	* src/jacl/tcl/lang/SocketChannel.java (seek): Remove
	seek method since this is taken care of in the super class.
	* src/jacl/tcl/lang/StdChannel.java (seek): Remove
	seek method since this is taken care of in the super class.

2001-11-17  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/jacl/tcl/lang/Channel.java (write): Turn
	the write method into a concrete implementation
	instead of an abstract method.
	* src/jacl/tcl/lang/FileChannel.java (write): Invoke
	Channel's write method to check for error writing to
	a read only channel.
	* src/jacl/tcl/lang/SocketChannel.java (write): Use
	new write method in Channel class.
	* src/jacl/tcl/lang/StdChannel.java (write): Use
	new write method in Channel class.

2001-11-17  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/jacl/tcl/lang/Shell.java (ConsoleThread, putLine,
	put): Make use of Tcl Channels instead of writing to
	System.out and System.err directly. This avoids buffering
	conflicts between the Shell and the Tcl interp.

2001-11-17  Mo DeJong  <mdejong@users.sourceforge.net>
